[package]
name = "bitcoin"
version = "0.26.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"


[features]
default = [ "secp-recovery" ]
base64 = [ "base64-compat" ]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

[dependencies]
bech32 = "0.7.2"
bitcoin_hashes = "0.9.1"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874" }

base64-compat = { version = "1.0.0", optional = true }
bitcoinconsensus = { git = "https://github.com/gregdhill/rust-bitcoinconsensus", rev = "46d6a0af47819ff2c6b9f8734c6de7d9fba45ba5", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874", features = ["rand-std"] }
# We need to pin ryu (transitive dep from serde_json) to stay compatible with Rust 1.22.0
ryu = "<1.0.5"
